# JMWC

./: CMakeLists.txt  README.md
executables/: jmwc.cpp  out.x69  sample.jmw
include/: JMWC.h
